# nnnnnnn

Manager Calatorii/: CMakeLists.txt  bilet.cpp  bilet.h  cursa.cpp  cursa.h  exceptions.h  gestionareCSV.cpp  gestionareCSV.h  main.cpp  managerCurse.cpp  managerCurse.h  operator.cpp  operator.h  operators.csv  password.cpp  password.h  trips.csv  user.cpp  user.h  users.csv  usersManager.cpp  usersManager.h  utils.cpp  utils.h
